<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="4dip">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingBottom="4dip"
        android:text="@string/remote_service_binding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btn_bind_remote_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bind_service" />

    <Button
        android:id="@+id/btn_bind_book_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bind_book_service" />

    <Button
        android:id="@+id/unbind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unbind_service" />

    <Button
        android:id="@+id/kill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kill_process" />

    <TextView
        android:id="@+id/callback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center_horizontal"
        android:hint="@string/callback"
        android:paddingTop="4dip"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</androidx.appcompat.widget.LinearLayoutCompat>
